<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/calculateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="275dp">

        <RadioButton
            android:id="@+id/compoundInterestWithAnnualAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:checked="false"
            android:text="@string/compoundInterestWithAnnualAdd" />

        <RadioButton
            android:id="@+id/annual_comp_int"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:checked="false"
            android:text="@string/annual_comp_int" />

        <RadioButton
            android:id="@+id/simple_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:checked="false"
            android:text="@string/simple_interest" />

        <RadioButton
            android:id="@+id/continuously_compound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:checked="false"
            android:text="@string/continuously_compound" />
    </RadioGroup>

    <Button
        android:id="@+id/continue_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/calculateGroup"
        android:layout_below="@+id/calculateGroup"
        android:text="@string/continue_next" />

    <Button
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/continue_next"
        android:layout_alignBottom="@+id/continue_next"
        android:layout_alignEnd="@+id/calculateGroup"
        android:text="@string/load" />

</RelativeLayout>