<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
    
    <TextView
        android:id="@+id/yearGrow"
        android:labelFor="@+id/yearGrowInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/interestRateInput"
        android:layout_alignParentStart="true"
        android:text="@string/years_grow" />

    <EditText
        android:id="@+id/yearGrowInput"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/interestRateInput"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberSigned">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/interestRate"
        android:labelFor="@+id/interestRateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/interestRateInput"
        android:layout_alignParentStart="true"
        android:text="@string/interest_rate" />


    <EditText
        android:id="@+id/interestRateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/currentPrincipleInput"
        android:layout_below="@+id/yearGrowInput"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:singleLine="true" />

    <TextView
        android:id="@+id/currentPrinciple"
        android:labelFor="@id/currentPrincipleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/interestRate"
        android:layout_marginTop="33dp"
        android:text="@string/current_principle" />

    <EditText
        android:id="@+id/currentPrincipleInput"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/currentPrinciple"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/currentPrinciple"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/numberOfTimesCompounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/numberOfTimesCompoundedInput"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/numberOfTimesCompoundedInput"
        android:maxLines="3"
        android:minLines="3"
        android:text="@string/annual_compound" />

    <EditText
        android:id="@+id/numberOfTimesCompoundedInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/currentPrincipleInput"
        android:layout_below="@+id/currentPrincipleInput"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="numberSigned"
        android:singleLine="true" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberOfTimesCompounded"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="26dp"
        android:layout_marginStart="50dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculate"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@+id/numberOfTimesCompounded"
        android:text="@string/total" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/calculate"
        android:layout_alignBottom="@+id/calculate"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@+id/total"
        android:text="@string/save" />

</RelativeLayout>