<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/yearGrow"
        android:labelFor="@+id/yearGrowInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/interestRateInput"
        android:layout_alignParentStart="true"
        android:text="@string/years_grow" />

    <EditText
        android:id="@+id/yearGrowInput"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/interestRateInput"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberSigned">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/interestRate"
        android:labelFor="@+id/interestRateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/interestRateInput"
        android:layout_alignParentStart="true"
        android:text="@string/interest_rate" />


    <EditText
        android:id="@+id/interestRateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/currentPrincipleInput"
        android:layout_below="@+id/yearGrowInput"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:singleLine="true" />

    <TextView
        android:id="@+id/currentPrinciple"
        android:labelFor="@id/currentPrincipleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/interestRate"
        android:layout_marginTop="33dp"
        android:text="@string/current_principle" />

    <EditText
        android:id="@+id/currentPrincipleInput"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/currentPrinciple"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/currentPrinciple"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/currentPrinciple"
        android:layout_marginTop="41dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/currentPrincipleInput"
        android:layout_below="@+id/calculate"
        android:layout_marginTop="22dp"
        android:text="@string/total" />

</RelativeLayout>